02/21/2013 FASP 1.2.1:
- Add monolithic AMG for system of PDEs.
- Fix a bug in the Makefile inside the "test/" dir.
- Modify push2sf.sh.
- Change smoother names: GS -> SMOOTHER_GS, etc.
- Modify coarse level solver definition according to a bug report for fasp4blkoil.
- Change preprocessor: "With_DISOLVE" -> "WITH_DISOLVE", etc to be consistent with VS08.
- Some small changes with variable names.

02/02/2013 FASP 1.2.0:
- Fix the bug in Windows: MINRES wrong in release version; remove /ffast option.
- Revise Makefile's.
- Update Documentation.
- Available online now.
- A public version is available online at fasp.sf.net.
- Update the webpage.

01/19/2013 FASP 1.1.8:
- Modify Windows VS08 compiler options.
- Add a test problem for testing (block) AMGs.
- Find a bug in Windows: MINRES gives wrong results in release version.
- Find a bug in VGMRES: Might use too big "restart".

01/17/2013 FASP 1.1.7:
- Fix unmatch brackets in OMP version.
- Fix a bunch of bugs when using "long int" as INT-type in AMG and related.
- Fix a bunch of bugs in regression when using "long int". 
- There is a bug in ILU when using "long int". 
- There might be non-matching types in i/o when using "long int".
- Test different optimization parameters for gcc.
- Fix a bug in testfem example.
- Add DIAG_PREF for a couple OMP functions.

01/02/2013 FASP 1.1.6:
- Modify library dependence order in Makefile's. 
- Revise make.inc to include source compiling rules.
- Add i/o routines for binary file.
- Add a uniform i/o routine for ASCII and Binary file formats.
- Add precond_free to free up memory used by preconditioner.
- Update README and User Guide.

11/26/2012 FASP 1.1.5:
- Fix the SuperLU interface.
- Fix a bug in SA setup for OMP.
- Fix a problem in SCons for Windows. 
- Modify the documentation: add instructions on how to compile FASP on Windows.
- Revise the userguide.
- Modify VS08 debug setting.

10/25/2012 FASP 1.1.4:
- Fix an error in scons help.
- Fix a bug in OMP version of EM-AMG.